<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navProfileId"
        android:title="@string/profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navMarHistory"
        android:title="@string/history"
        app:showAsAction="never" />
    <item
        android:id="@+id/navMarStatement"
        android:title="@string/statement"
        app:showAsAction="never" />

    <item android:title="@string/transaction_section">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navWithdrawRequestId"
                    android:title="@string/withdraw_request"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navWithdrawHistoryId"
                    android:title="@string/withdraw_history"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navWithdrawDashboardId"
                    android:title="@string/withdraw_dashboard"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navTransactionHistoryId"
                    android:title="@string/transaction_history"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item android:title="@string/about_company">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navPrivacyPolicyId"
                    android:title="@string/privacy_policy"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/navTermsAndConditionId"
                    android:title="@string/terms_conditions"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/navAboutUsId"
                    android:title="@string/about"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/navLogOutId"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>