<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navAddMarketerId"
        android:title="@string/add_marketer"
        app:showAsAction="never" />

    <item
        android:id="@+id/navProfileId"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item android:title="@string/about_company">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navPrivacyPolicyId"
                    android:title="@string/privacy_policy"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/navTermsAndConditionId"
                    android:title="@string/terms_conditions"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/navAboutUsId"
                    android:title="@string/about"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/navLogOutId"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>