<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_margin="3dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="2dp"
            android:padding="3dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/itemId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:layout_marginEnd="3sp"
                    android:textColor="@color/black" />

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/name"
                    android:id="@+id/nameId"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/total_balance"
                    android:id="@+id/balanceId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <View
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/email"
                    android:id="@+id/emailId"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/mobile"
                    android:id="@+id/phoneId"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/country"
                    android:paddingRight="10dp"
                    android:id="@+id/countryCodeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <View
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/transaction_date_and_time"
                    android:id="@+id/dateAndTimeId"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:text="@string/referral"
                    android:id="@+id/referralCodeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/status"
                    android:id="@+id/statusId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>