<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_3ssp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_3ssp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">

            <TextView
                android:visibility="gone"
                android:textColor="@color/black"
                android:text="@string/type"
                android:id="@+id/typeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:visibility="gone"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/id"
                android:id="@+id/typedIdId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <View
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/message"
                    android:id="@+id/messageId"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/amount"
                    android:id="@+id/amountId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/status"
                    android:id="@+id/statusId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/transaction_date_and_time"
                    android:id="@+id/dateAndTimeId"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/update_date_and_time"
                    android:id="@+id/updateDateAndTimeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>