<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3ssp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:orientation="vertical"
            android:padding="@dimen/_3ssp"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/itemId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:layout_marginEnd="@dimen/_3ssp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf">

                <TextView
                    android:id="@+id/transactionId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transaction_id"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/statusId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf">

                <TextView
                    android:id="@+id/amountId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:id="@+id/postAmountId"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_2sdp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:gravity="end"
                    android:id="@+id/messageId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/message"
                    android:textColor="@color/white"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf">

                <TextView
                    android:id="@+id/dateAndTimeId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transaction_date_and_time"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/updateDateAndTimeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_date_and_time"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>